# arxiv-summarizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  arxiv_summarizer.py  new-release.sh  pyproject.toml
arxiv_summarizer/: __main__.py  summarizer.py
